--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,12 @@
 fastapi>=0.95.0
 uvicorn[standard]>=0.22.0
 pydantic>=1.10.0
-crewai[google-genai]
+crewai>=0.36.0
+crewai-tools>=0.4.0
+PyGithub>=1.59.1
+python-dotenv>=1.0.0
+google-generativeai>=0.3.0
+requests>=2.31.0
+aiohttp>=3.9.0
+packaging>=21.0
+semver>=3.0.0
