--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,10 @@ description = "PR-Agent: Multi-agent system for GitHub Pull Request reviews usin
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "crewai>=0.36.0",
+    "crewai[google-genai]>=0.36.0",
     "crewai-tools>=0.4.0",
     "PyGithub>=1.59.1",
     "python-dotenv>=1.0.0",
-    "google-generativeai>=0.3.0",
     "requests>=2.31.0",
     "aiohttp>=3.9.0",
     "packaging>=21.0",
