--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ fastapi>=0.95.0
 uvicorn[standard]>=0.22.0
 pydantic>=1.10.0
 
-# AI Agent Framework
-crewai>=0.36.0
+# AI Agent Framework (with Google AI support)
+crewai[google-genai]>=0.36.0
 crewai-tools>=0.4.0
 
 # GitHub Integration
@@ -15,9 +15,6 @@ PyGithub>=1.59.1
 
 # Environment & Configuration
 python-dotenv>=1.0.0
-
-# Google AI Integration
-google-generativeai>=0.3.0
 
 # HTTP & Networking
 requests>=2.31.0
