--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,14 @@ crewai[google-genai]>=0.36.0
 crewai-tools>=0.4.0
 PyGithub>=1.59.1
 python-dotenv>=1.0.0
+google-generativeai>=0.8.0
+requests>=2.31.0
+aiohttp>=3.9.0
+packaging>=21.0
+semver>=3.0.0>=0.36.0
+crewai-tools>=0.4.0
+PyGithub>=1.59.1
+python-dotenv>=1.0.0
 requests>=2.31.0
 aiohttp>=3.9.0
 packaging>=21.0
