--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ pydantic>=1.10.0
 crewai[google-genai]>=0.36.0
 crewai-tools>=0.4.0
 
+# Google AI Integration (explicit dependency)
+google-generativeai>=0.8.0
+
 # GitHub Integration
 PyGithub>=1.59.1
 
