feat: update CrewAI model version to gemini-2.5-flash in environment template and dependency checks

--- a/.env.production.template
+++ b/.env.production.template
@@ -11,8 +11,8 @@ GOOGLE_API_KEY=your_google_api_key_here
 
 # CrewAI Configuration - Use native Google AI integration
 # Don't set these in production - let CrewAI use its native Google AI provider
-# OPENAI_MODEL_NAME=gemini-1.5-flash
-# OPENAI_API_BASE=https://generativelanguage.googleapis.com/v1beta
+# OPENAI_MODEL_NAME=gemini-2.5-flash
+# OPENAI_API_BASE=https://generativelanguage.googleapis.com/v1
 # OPENAI_API_KEY=
 
 # Telemetry and Performance
